--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@ layout: compress
 </div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.5.18/webfont.js"></script>
+<script async src="https://cdnjs.cloudflare.com/ajax/libs/vanilla-lazyload/10.3.1/lazyload.min.js"></script>
 <script>
     WebFont.load( {
         google: {
@@ -31,15 +32,15 @@ layout: compress
     } );
 
     function re() {
-        var a = 'tdwesten';
-        var b = '@';
-        var c = 'gmail.com';
-        var d = '?subject=Hi Thomas!';
+        const a = 'tdwesten', b = '@', c = 'gmail.com', d = '?subject=Hi Thomas!';
         document.getElementById( 'email-link' ).setAttribute( 'href', 'mailto:' + a + b + c + d );
         document.getElementById( 'email-link' ).innerHTML = 'Laat iets van je horen';
     }
 
     re();
 
+    window.lazyLoadOptions = {
+
+    }
 </script>
 </body>
