--- a/index.html
+++ b/index.html
@@ -22,14 +22,24 @@ layout: compress
 
 </div>
 
-<script src="https://ajax.googleapis.com/ajax/libs/webfont/1.5.18/webfont.js"></script>
 <script async src="https://cdnjs.cloudflare.com/ajax/libs/vanilla-lazyload/10.3.1/lazyload.min.js"></script>
 <script>
-    WebFont.load( {
+
+
+    WebFontConfig = {
+
         google: {
             families: [ 'Roboto:300,400,500' ]
         }
-    } );
+    };
+    (function () {
+        var wf   = document.createElement( 'script' );
+        wf.src   = 'https://ajax.googleapis.com/ajax/libs/webfont/1/webfont.js';
+        wf.type  = 'text/javascript';
+        wf.async = 'true';
+        var s    = document.getElementsByTagName( 'script' )[ 0 ];
+        s.parentNode.insertBefore( wf, s );
+    })();
 
     function re() {
         const a = 'tdwesten', b = '@', c = 'gmail.com', d = '?subject=Hi Thomas!';
@@ -39,8 +49,7 @@ layout: compress
 
     re();
 
-    window.lazyLoadOptions = {
-
-    }
+    window.lazyLoadOptions = {}
 </script>
+
 </body>
