--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ layout: compress
 
     re();
 
-    window.lazyLoadOptions = {}
+    window.lazyLoadOptions = {};
     window.dataLayer       = window.dataLayer || [];
 
     function gtag() {dataLayer.push( arguments );}
