--- a/index.html
+++ b/index.html
@@ -23,8 +23,24 @@ layout: compress
 </div>
 
 <script async src="https://cdnjs.cloudflare.com/ajax/libs/vanilla-lazyload/10.3.1/lazyload.min.js"></script>
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-109632702-1"></script>
 <script>
+    if ( navigator.userAgent.indexOf( "Speed Insights" ) == -1 ) {
+        const head   = document.getElementsByTagName( 'head' )[ 0 ];
+        const script = document.createElement( 'script' );
+        script.type  = 'text/javascript';
+        script.src   = 'https://www.googletagmanager.com/gtag/js?id=UA-109632702-1';
+        head.appendChild( script );
+
+        window.dataLayer = window.dataLayer || [];
+
+        function gtag() { dataLayer.push( arguments );}
+
+        gtag( 'js', new Date() );
+
+        gtag( 'config', 'UA-109632702-1' );
+    }
+    window.lazyLoadOptions = {};
+
     function re() {
         const a = 'tdwesten', b = '@', c = 'gmail.com', d = '?subject=Hi Thomas!';
         document.getElementById( 'email-link' ).setAttribute( 'href', 'mailto:' + a + b + c + d );
@@ -32,15 +48,6 @@ layout: compress
     }
 
     re();
-
-    window.lazyLoadOptions = {};
-    window.dataLayer       = window.dataLayer || [];
-
-    function gtag() {dataLayer.push( arguments );}
-
-    gtag( 'js', new Date() );
-
-    gtag( 'config', 'UA-109632702-1' );
 
 </script>
 
